fixes to the light/dark mode feature

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: none;
+  background: transparent;
   padding: 18px 7%;
 }
 
@@ -52,6 +52,7 @@
 }
 
 .dark .Navbar{
-  background-color: #021925;
+  background: transparent;
   color: aliceblue;
 }
+
